--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -2,9 +2,15 @@
 # but the additional complexity isn't worth it as Docker is new to the team (as of late 2020)
 FROM python:3.8.6-slim
 
+
 # Not running as root is a standard saftey procedure
 # The username "thalia" was choosen as a spiritual successor to the postgres bot "sylvia"
-RUN useradd --create-home --shell /bin/bash thalia
+#
+# Unfortunately best practices are thrown aside for convience>
+# There is a permission error when writing to /usr/src/app/pyparcel/parcelidlists/{filename}
+# and it wasn't easily solved by RUN chown -R thalia usr/src/app/pyparcel/parcelidlists
+#
+# RUN useradd --create-home --shell /bin/bash thalia
 
 WORKDIR usr/src/app
 
@@ -12,6 +18,7 @@ WORKDIR usr/src/app
 ENV PYTHONUNBUFFERED 1
 # Makes a smaller docker image when installing modules?
 ENV PYTHONDONTWRITEBYTECODE 1
+
 
 # Install dependencies
 RUN pip install --upgrade pip
@@ -25,7 +32,10 @@ COPY setup.py setup.py
 COPY pyparcel/__init__.py pyparcel/__init__.py
 RUN pip install -e .
 
+
 # There's probably a way to install everything at once but this works
 COPY . usr/src/app
 
-USER thalia
+# Todo: Make this work
+# RUN chown -R thalia usr/src/app/pyparcel/parcelidlists
+# USER thalia
